stopping overlap

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -13,6 +13,7 @@ html, body, #app, .crypttoad {
 }
 
 .leftSide {
+	flex: 1;
 	display: flex;
 	flex-flow: column nowrap;
 }
@@ -41,7 +42,7 @@ html, body, #app, .crypttoad {
 }
 
 .mainPageInfo {
-	flex: 1;
+	flex: 14;
 
 	display: flex;
 	flex-flow: column;
@@ -51,11 +52,23 @@ html, body, #app, .crypttoad {
 }
 
 .currencySelect {
+	flex: 2;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	min-height: 50px;
+}
+
+.selectedMarketButton {
+	margin: 5%;
+}
+
+.autocorrect {
 	flex: 1;
 }
 
 .markets {
-	flex: 1;
+	flex: 16;
 	width: 100%;
 
 	display: flex;
@@ -69,9 +82,23 @@ html, body, #app, .crypttoad {
 }
 
 .marketGraph {
-	flex: 1;
-		width: 0;
+	flex: 32;
+	width: 0;
+	background-color: white;
+}
 
+.marketStats {
+	flex: 4;
+	background-color: #e3e3e3;
+	margin: 0 0 0 3%;
+}
+
+.footer {
+	flex: 1;
+}
+
+.rightSidebar {
+	flex: 1;
 }
 
 /*
@@ -134,7 +161,7 @@ li {
 	font-family: Helvetica, sans-serif;
 	font-weight: 300;
 	font-size: 20px;
-	max-height: 80px;
+	max-height: 60px;
 	overflow-y: auto;
 	z-index: 2;
 }
